2008-09-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	gnome_cmd_file_list_show_dir_size() -> GnomeCmdFileList::show_dir_size()

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	inline gnome_cmd_dir_ref() and gnome_cmd_dir_unref()

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-options-dialog.cc:
	* gnome-cmd-tags-doc.cc:
	gcc warnings cleanup

2008-09-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-cmdline.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	GnomeCmdData: more C++ rework

2008-09-24  Takao Fujiwara  <Takao.Fujiwara@Sun.COM>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/utils.cc:
	Fixed problem #548947 (non-UTF8 locale date problem)

2008-09-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	file_is_in_list(GnomeCmdFileSelector *fs, GnomeCmdFile *f) -> GnomeCmdFileList::has_file(const GnomeCmdFile *f)

	* src/gnome-con-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-quicksearch-popup.cc:
	* src/gnome-cmd-remote-dialog.cc:
	* src/main.cc:
	* src/utils.cc:
	GnomeCmdData: more C++ rework

2008-09-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/dirlist.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-xfer.cc:
	GnomeCmdData: gnome_cmd_data_get_gui_update_rate() -> gnome_cmd_data.gui_update_rate
